fix header z-index

--- a/src/components/common/DashboardHeader/style.scss
+++ b/src/components/common/DashboardHeader/style.scss
@@ -3,6 +3,7 @@
 .dashboard-header {
     position: sticky;
     top: 0;
+    z-index: 45;
     display: flex;
     align-items: center;
     height: 64px;
